--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,18 @@
 
+############################### MySQL database properties 
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url = jdbc:mysql://localhost:3306/online_shopping_app?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username = anil
+spring.datasource.password = anil
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.generate_statistics=true
